Patch `-webkit` box prefixing to restore support for legacy — ie iOS 11 devices

--- a/packages/tokenizer/browser/styles/markup-debug.css
+++ b/packages/tokenizer/browser/styles/markup-debug.css
@@ -143,6 +143,7 @@
     /* outline: 1px solid greenyellow; */
     /* margin: 0; */
     /* padding: 0; */
+    -webkit-margin-end: -100%;
     margin-inline-end: -100%;
     pointer-events: none;
     width: 0;
