Improve fetch error handling in demo

--- a/packages/tokenizer/browser/demo/demo.css
+++ b/packages/tokenizer/browser/demo/demo.css
@@ -67,6 +67,10 @@
     margin: 0 1em 0 0;
   }
 
+  .markup-content.fault > .markup-wrapper {
+    margin: 0 0.5em;
+  }
+
   .markup-container .markup-content {
     padding-top: 4em;
     margin-top: -3em;
