--- a/packages/markup/browser/styles/markup.css
+++ b/packages/markup/browser/styles/markup.css
@@ -17,8 +17,8 @@
 
 :root {
   /**/ /**/ /**/ /**/ /** DEFAULTS **/ /**/ /**/ /**/ /**/
-  --markup-tab-size: 4;
-  --markup-soft-indent-tab-size: 2;
+  --markup-tab-size: 2;
+  --markup-soft-inset-size: 2;
 }
 
 :root,
@@ -35,6 +35,9 @@
   --markup-dark-text: #eee;
   --markup-dark: #333f46;
   --markup-dark-fade: #333f4633;
+
+  --markup-active-line: #39f;
+  --markup-active-fade: #39f9;
 
   /**/ /**/ /**/ /**/ /** PRIMARIES **/ /**/ /**/ /**/ /**/
   --markup-light-background: var(--markup-light, #f9f9f9);
@@ -133,64 +136,92 @@
   }
 }
 
+/* .markup-line, */
+/* .markup-line > .markup, */
+.markup-token,
+.markup-line > .markup,
 .markup-line {
-  break-before: auto;
-  break-inside: avoid;
-
-  --markup-soft-indent: calc(1em * var(--markup-soft-indent-tab-size));
-  --markup-text-indent: calc(-1 * var(--markup-soft-indent, 0.0001em) + 1px);
-  --markup-inset-margin: calc(var(--markup-gutter, 0));
-  --markup-inset-padding: calc(0.275em + var(--markup-soft-indent, 0.0001em));
-
-  /* --markup-soft-indent: 1em; */
-  /* --markup-soft-indent: 0; */
-
-  display: block;
+  columns: initial;
+  transform: initial;
+  animation: initial;
+  will-change: initial;
+  scale: initial;
+  zoom: initial;
+  pointer-events: visible;
+  text-indent: 0;
   padding: 0;
   margin: 0;
+  border-collapse: separate;
+  white-space: pre-wrap;
+  box-sizing: border-box;
+}
 
-  text-indent: calc(-1 * var(--markup-soft-indent, 0.0001em) + 1px);
-  -webkit-margin-start: calc(var(--markup-gutter, 0) + 1px);
-  margin-inline-start: calc(var(--markup-gutter, 0) + 1px);
-  -webkit-padding-start: calc(0.275em + var(--markup-soft-indent, 0.0001em));
-  padding-inline-start: calc(0.275em + var(--markup-soft-indent, 0.0001em));
-
-  /* --markup-line-start-margin: calc(var(--markup-gutter, 0) + 1px); */
-  /* --markup-line-start-padding: calc(0.275em + var(--markup-soft-indent, 0.0001em)); */
-  /* --markup-line-indent: calc(-1 * var(--markup-soft-indent, 0.0001em) + 1px); */
-  /* -webkit-margin-start: var(--markup-line-start-margin); */
-  /* margin-inline-start: var(--markup-line-start-margin); */
-  /* -webkit-padding-start: var(--markup-line-start-padding); */
-  /* padding-inline-start: var(--markup-line-start-padding); */
-  /* text-indent: var(--markup-line-indent); */
-
-  /* border: 0 solid transparent; */
-  /* width: -webkit-fill-available; */
-  /* width: -moz-fill-available; */
-  /* width: fill-available; */
-
+.markup-line {
+  --em--: calc(1em - 1em);
+  cursor: var(--markup-line-cursor);
   outline: var(--markup-line-outline);
   outline-offset: var(--markup-line-outline-offset, -0.5px);
   opacity: var(--markup-line-opacity);
   color: var(--markup-line-color);
   background-color: var(--markup-line-background-color);
-  text-rendering: optimizeSpeed;
-
+  break-before: auto;
+  break-inside: avoid;
+  display: flow-root;
+  text-rendering: geometricPrecision;
   font-synthesis: weight;
   font-variant-ligatures: common-ligatures discretionary-ligatures contextual historical-ligatures;
   font-weight: 300;
-}
-
-.markup-line.no-reflow {
-  /* --markup-soft-indent: 0.0001em; */
-}
-
-.markup-line .markup {
-  color: var(--color, var(--markup-color, var(--markup-light-text, currentColor)));
   hyphens: none;
-  word-break: initial;
+  word-break: break-word;
+  overflow-wrap: break-word;
   line-break: loose;
-  /* text-rendering: geometricPrecision; */
+  line-clamp: 1;
+  white-space: pre-wrap;
+}
+
+.markup-line :not(.markup-line).markup {
+  display: var(--markup-token-display, contents);
+  margin: var(--markup-token-margin, 0);
+  color: var(--color, var(--markup-color, var(--markup-light-text, currentColor)));
+}
+
+.markup-line.markup {
+  --markup-token-display: contents;
+  --markup-token-margin: 0px;
+  --markup-line-number-font-scale: 0.75;
+  --markup-line-number-color: var(--markup-neutral-dim, #9999);
+  --markup-line-number-background-color: transparent;
+  --markup-line-number-opacity: 1;
+  --markup-line-inset: calc(
+    var(--markup-line-inset-spaces, 0) + var(--markup-tab-size, 2) * var(--markup-line-inset-tabs, 0)
+  );
+  --markup-line-indent: calc(1em * var(--markup-line-inset, 0));
+  --markup-soft-indent: calc(1em * var(--markup-soft-inset-size));
+  --markup-text-indent: calc(-1 * var(--markup-soft-indent, 0.0001em));
+  --markup-inset-margin: calc(var(--markup-gutter, 0));
+  --markup-inset-padding: calc(0.275em + var(--markup-soft-indent, 0.0001em));
+
+  -webkit-margin-start: var(--markup-inset-margin, 0);
+  /* -webkit-margin-start: calc(var(--markup-inset-margin, 0) + var(--markup-line-indent, 0.0001em)); */
+  margin-inline-start: var(--markup-inset-margin, 0);
+  /* margin-inline-start: calc(var(--markup-inset-margin, 0) + var(--markup-line-indent, 0.0001em)); */
+  /* -webkit-padding-start: var(--markup-inset-padding, 0); */
+  -webkit-padding-start: calc(var(--markup-inset-padding, 0) + var(--markup-line-indent, 0.0001em));
+  /* padding-inline-start: var(--markup-inset-padding, 0); */
+  padding-inline-start: calc(var(--markup-inset-padding, 0) + var(--markup-line-indent, 0.0001em));
+  /* text-indent: var(--markup-text-indent, 0); */
+  text-indent: calc(var(--markup-text-indent, 0) - var(--markup-line-indent, 0.0001em));
+
+  /* SEE: https://drafts.csswg.org/css-text-3/#text-indent-property */
+}
+
+/* .markup-line.markup > .markup.inset:first-child {} */
+.markup-line.markup > .markup.comment.single-line-comment {
+  display: inline-block !important;
+}
+
+.markup-line.markup.no-reflow {
+  --markup-soft-indent: calc(1em * 0);
 }
 
 .markup-line-numbers pre,
@@ -201,13 +232,10 @@ pre > .markup-line-numbers {
   counter-reset: line;
 }
 
-.markup-line-numbers pre .markup-line,
-pre.markup-line-numbers .markup-line,
-pre.markup[line-numbers] .markup-line,
-pre > .markup-line-numbers .markup-line {
-  --markup-line-number-font-scale: 0.75;
-  --markup-line-number-color: var(--markup-neutral-dim, #9999);
-
+.markup-line-numbers pre .markup-line.markup,
+pre.markup-line-numbers .markup-line.markup,
+pre.markup[line-numbers] .markup-line.markup,
+pre > .markup-line-numbers .markup-line.markup {
   border: 0 solid transparent;
   -webkit-border-start-width: 0.5px;
   border-inline-start-width: 0.5px;
@@ -215,8 +243,8 @@ pre > .markup-line-numbers .markup-line {
   border-inline-start-color: #9999;
 }
 
-.markup-line-numbers .markup-line::before,
-pre.markup[line-numbers] .markup-line::before {
+.markup-line-numbers .markup-line.markup::before,
+pre.markup[line-numbers] .markup-line.markup::before {
   float: left;
   vertical-align: middle;
 
@@ -233,8 +261,16 @@ pre.markup[line-numbers] .markup-line::before {
   width: calc(-0.5em + var(--markup-gutter, 0.5em));
   height: calc(100% * var(--font-scale));
 
-  -webkit-margin-start: calc(-1 * var(--markup-gutter, 0) - var(--markup-soft-indent) / 0.75 + 1px);
-  margin-inline-start: calc(-1 * var(--markup-gutter, 0) - var(--markup-soft-indent) / 0.75 + 1px);
+  -webkit-margin-start: calc(
+    -1 * var(--markup-gutter, 0) - var(--markup-soft-indent) / var(--font-scale) - var(--markup-line-indent, 0.0001em) /
+      var(--font-scale) + 1px
+  );
+  margin-inline-start: calc(
+    -1 * var(--markup-gutter, 0) - var(--markup-soft-indent) / var(--font-scale) - var(--markup-line-indent, 0.0001em) /
+      var(--font-scale) + 1px
+  );
+  /* -webkit-margin-start: calc(-1 * var(--markup-gutter, 0) - var(--markup-soft-indent) / var(--font-scale)); */
+  /* margin-inline-start: calc(-1 * var(--markup-gutter, 0) - var(--markup-soft-indent) / var(--font-scale)); */
 
   font-size: calc(100% * var(--font-scale));
   font-variant: small-caps;
@@ -247,118 +283,123 @@ pre.markup[line-numbers] .markup-line::before {
 
   color: var(--markup-line-number-color, inherit);
   background-color: var(--markup-line-number-background-color, transparent);
+
+  opacity: var(--markup-line-number-opacity);
 }
 
-.markup.sequence {
+.markup.markup-token.sequence {
   --color: var(--markup-sequences, grey);
 }
 
-.markup.literal {
+.markup.markup-token.literal {
   --color: var(--markup-literals, darkcyan);
 }
 
-.markup.identifier {
+.markup.markup-token.identifier {
   --color: var(--markup-identifiers, darkslategrey);
   font-weight: 400;
   /* font-style: italic; */
 }
 
-.markup.keyword {
+.markup.markup-token.keyword {
   --color: var(--markup-keywords, chocolate);
   /* font-weight: 300; */
 }
 
-.markup.pattern.delimiter,
-.markup.pattern.opener,
-.markup.pattern.closer,
-.markup.punctuator {
+.markup.markup-token.pattern.delimiter,
+.markup.markup-token.pattern.opener,
+.markup.markup-token.pattern.closer,
+.markup.markup-token.punctuator {
   --color: var(--markup-punctuators, lightseagreen);
-  text-rendering: geometricPrecision;
+  /* text-rendering: geometricPrecision; */
 }
 
 /* .markup.delimiter, */
-.markup.opener,
-.markup.closer {
+.markup.markup-token.opener,
+.markup.markup-token.closer {
   --color: var(--markup-closures, orange);
 }
 
-.markup.operator {
+.markup.markup-token.operator {
   --color: var(--markup-operators, limegreen);
-  text-rendering: geometricPrecision;
+  /* text-rendering: geometricPrecision; */
 }
 
 /* .markup.in-pattern.delimiter, */
-.markup.in-pattern.opener,
-.markup.in-pattern.closer,
-.markup.combinator {
+.markup.markup-token.in-pattern.opener,
+.markup.markup-token.in-pattern.closer,
+.markup.markup-token.combinator {
   --color: var(--markup-combinators, cornflowerblue);
-  text-rendering: geometricPrecision;
+  /* text-rendering: geometricPrecision; */
 }
 
-.markup.breaker {
+.markup.markup-token.breaker {
   --color: var(--markup-breakers, grey);
 }
 
-.markup.string,
-.markup.in-string,
-.markup.quote,
-.markup.in-quote {
+.markup.markup-token.string,
+.markup.markup-token.in-string,
+.markup.markup-token.quote,
+.markup.markup-token.in-quote {
   --color: var(--markup-quotes, cadetblue);
 }
 
-.markup.delimiter,
-.markup.punctuator.span {
+.markup.markup-token.delimiter,
+.markup.markup-token.punctuator.span {
   --color: var(--markup-spans, coral);
 }
 
 /**/ /**/ /**/ /**/ /** LITERALS **/ /**/ /**/ /**/ /**/
 
-.markup.regexp,
-.markup.pattern {
+.markup.markup-token.regexp,
+.markup.markup-token.pattern {
   --color: var(--markup-patterns, grey);
 }
 
-.markup.literal {
+.markup.markup-token.literal {
   font-weight: 400;
 }
 
-.markup.punctuator {
+.markup.markup-token.punctuator {
   font-weight: 400;
 }
 
-.markup.regexp,
-.markup.in-regexp,
-.markup.pattern,
-.markup.in-pattern,
-.markup.string,
-.markup.in-string,
-.markup.quote,
-.markup.in-quote,
+.markup.markup-token.regexp,
+.markup.markup-token.in-regexp,
+.markup.markup-token.pattern,
+.markup.markup-token.in-pattern,
+.markup.markup-token.string,
+.markup.markup-token.in-string,
+.markup.markup-token.quote,
+.markup.markup-token.in-quote,
+.markup.markup-fault,
 .markup.fault {
   font-weight: 400;
   font-variant-ligatures: none;
+  --markup-token-display: inline;
 }
 
-.markup.comment,
-.markup.in-comment {
+.markup.markup-token.comment,
+.markup.markup-token.in-comment {
   --color: var(--markup-comments, #aaa);
 }
 
-.markup.break,
-.markup.whitespace {
+.markup.markup-token.break,
+.markup.markup-token.whitespace {
   --color: var(--markup-whitespace, #999);
 }
 
 .markup-line.fault,
+.markup.markup-fault,
 .markup.fault {
   --color: var(--markup-faults, white);
   background-color: var(--markup-faults-highlight, #f219);
   font-variant-ligatures: none;
 }
 
-.markup.delimiter,
-.markup.opener,
-.markup.closer {
+.markup.markup-token.delimiter,
+.markup.markup-token.opener,
+.markup.markup-token.closer {
   font-weight: 500;
   /* font-variant-ligatures: none; */
 }
@@ -382,7 +423,8 @@ pre.markup[line-numbers] .markup-line::before {
 }
 
 @media only print {
-  .markup-line-numbers .markup-line::before {
-    color: black;
+  .markup-line.markup {
+    --markup-line-number-color: black;
+    /* color: black; */
   }
 }
