--- a/packages/markup/browser/demo.css
+++ b/packages/markup/browser/demo.css
@@ -61,6 +61,9 @@
     margin: 0;
     box-sizing: border-box;
     contain: content;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
   }
 
   .markup-wrapper {
@@ -71,6 +74,12 @@
     margin: 0 0.5em;
   }
 
+  .markup-container > :not(.markup-content) * {
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+  }
+
   .markup-container .markup-content {
     padding-top: 4em;
     margin-top: -3em;
@@ -78,6 +87,12 @@
     margin-right: -1ch;
     /* line-break: loose; */
     /* word-wrap: break-word; */
+    user-select: contain;
+    -webkit-user-select: contain;
+    -moz-user-select: contain;
+  }
+
+  .markup-container .markup-content .markup-wrapper {
     user-select: text;
     -webkit-user-select: text;
     -moz-user-select: text;
